[package]
name = "git-remote-ipgrv"
version = "0.0.1"
authors = ["leavehouse <heavelouse@gmail.com>"]

[dependencies]
chrono = "0.4.0"
fern = "0.5.2"
flate2 = "1.0.1"
git2 = "0.6.11"
hex = "0.3.1"
home = "0.3.0"
#ipld-git = { git = "git://github.com/leavehouse/rust-ipld-git" }
ipld-git = { path = "../rust-ipld-git" }
lmdb-zero = "0.4.1"
log = "0.4.1"
multihash = "0.7.0"
reqwest = "0.8.4"
url = "1.6.0"
